# galaga-clone

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-02-difficulty-selection.ko.md  2026-05-02-difficulty-selection.md  2026-05-02-galaga-clone.ko.md  2026-05-02-galaga-clone.md  2026-05-02-tractor-beam.ko.md  2026-05-02-tractor-beam.md
docs/superpowers/specs/: 2026-05-02-galaga-clone-design.ko.md  2026-05-02-galaga-clone-design.md  2026-05-02-tractor-beam-design.ko.md  2026-05-02-tractor-beam-design.md
docs/uml/: classes_Galaga.dot  classes_Galaga.mmd  classes_Galaga.puml  packages_Galaga.dot  packages_Galaga.mmd  packages_Galaga.puml
engine/: __init__.py  assets.py  audio.py  input.py  scene.py
entities/: __init__.py  bullet.py  captured_animation.py  enemy.py  explosion.py  player.py  rescuing_ship.py  tractor_beam.py
game/: __init__.py  capture.py  difficulty.py  dive.py  formation.py  hud.py  scoring.py  wave.py
scenes/: __init__.py  bonus.py  gameover.py  play.py  title.py  transitions.py
tests/: conftest.py  test_capture.py  test_difficulty.py  test_dive.py  test_formation.py  test_scoring.py  test_wave.py
tools/: generate_audio.py  generate_sprites.py
